Replaced use of methods not available in Java 17